--- a/eclipse-workspace/springmvc/src/main/webapp/WEB-INF/web.xml
+++ b/eclipse-workspace/springmvc/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>springmvc</display-name>
-	<context-param>
+	<!-- <context-param>
 		<param-name>contextClass</param-name>
 		<param-value>
 			org.springframework.web.context.support.AnnotationConfigWebApplicationContext
@@ -11,20 +11,20 @@
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+	</listener> -->
 
 	<servlet>
 		<servlet-name>SpringDispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
+		<!-- <init-param>
 			<param-name>contextClass</param-name>
 			<param-value>
 				org.springframework.web.context.support.AnnotationConfigWebApplicationContext
 			</param-value>
-		</init-param>
+		</init-param> -->
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>com.ibm.springmvc</param-value>
+			<param-value>/WEB-INF/SpringDispatcher-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
