--- a/eclipse-workspace/EmployeeManagement/pom.xml
+++ b/eclipse-workspace/EmployeeManagement/pom.xml
@@ -2,11 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.ibm</groupId>
-	<artifactId>springmvc</artifactId>
+	<groupId>com.spring.mvc</groupId>
+	<artifactId>EmployeeManagement</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging> 
-	<properties> 
+	<packaging>war</packaging>
+
+	<name>EmployeeManagement</name>
+	<url>http://maven.apache.org</url>
+
+	<properties>
 		<java.version>1.8</java.version>
 		<spring.version>5.3.39</spring.version>
 		<cglib.version>2.2.2</cglib.version>
@@ -34,10 +38,33 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>2.7.0</version>
+		    <groupId>com.zaxxer</groupId>
+		    <artifactId>HikariCP</artifactId>
+		    <version>5.1.0</version>
 		</dependency>
+
+		
+		<!-- Spring Data JPA -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
+		    <version>2.5.12</version> <!-- Compatible with Spring 5.3.39 -->
+		</dependency>
+
+<!-- JPA API -->
+		<dependency>
+		    <groupId>javax.persistence</groupId>
+		    <artifactId>javax.persistence-api</artifactId>
+		    <version>2.2</version>
+		</dependency>
+		
+		<!-- Hibernate (JPA implementation) -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>5.4.33.Final</version>
+		</dependency>
+
 		
 		
 		
@@ -67,10 +94,12 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
 		</dependency>
+
+
 
 		<!-- CGLib for @Configuration -->
 		<dependency>
@@ -105,7 +134,7 @@
 	</repositories>
 
 	<build>
-		<finalName>springmvc</finalName>
+		<finalName>EmployeeManagement</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
